Add path aliases for scripts and utils in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
       "@icons/*": [
         "src/icons/*"
       ],
+      "@scripts/*": [
+        "src/scripts/*"
+      ],
+      "@utils/*": [
+        "src/utils/*"
+      ],
     }
   }
 }
