feat: add React support and update dependencies for improved compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,8 @@
       "@definitions/*": [
         "src/definitions/*"
       ]
-    }
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
