--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "astro-blog",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/react": "^4.2.1",
-    "@tailwindcss/vite": "^4.0.6",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "astro": "^5.2.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
-  }
+	"name": "astro-blog",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/react": "^4.2.1",
+		"@tailwindcss/vite": "^4.0.6",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
+		"astro": "^5.2.5",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwindcss": "^4.0.6"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@tailwindcss/typography": "^0.5.16"
+	},
+	"pnpm": {
+		"ignoredBuiltDependencies": ["@biomejs/biome"]
+	}
 }
